--- a/scheduled.Rmd
+++ b/scheduled.Rmd
@@ -51,6 +51,6 @@ Free shuttle to GBI Airport.
    
 ---
    
-### Dec 2018 - FIT Summit  
+### Dec 12-13, 2018 - Manhattan Beach, CA (SAT)  
   
-_Details coming soon_  
+SSA 200 will be offered during the SAT Calibration Workshop 
