updated instructors info

--- a/instructors.Rmd
+++ b/instructors.Rmd
@@ -10,6 +10,7 @@ Auburn, AL
   
 __Dr. Nicole Angeli__  
 Postdoctoral Fellow, Alabama Cooperative Fish and Wildlife Research Unit  
+_Nicole has moved on and is now the Chief of Wildlife at the Division of Fish and Wildlife, Department of Planning and Natural Resources, U.S. Virgin Islands_
 [More about Nicole](http://nicoleangeli1.wixsite.com/appliedconservation)  
   
 __Anna Tucker__  
