diagram and assessment results

--- a/handouts.Rmd
+++ b/handouts.Rmd
@@ -2,7 +2,9 @@
 title: "Useful links and materials"
 ---
   
+__Modeling for SSAs__  
   
+[Conceptual diagram](static/handouts/conceptual-diagram.pdf)
 
   
 __Species Status Assessments__  
