--- a/handouts.Rmd
+++ b/handouts.Rmd
@@ -6,6 +6,7 @@ __Modeling for SSAs__
   
 [Conceptual diagram](static/handouts/conceptual-diagram.pdf)  
   
+---
   
 __Species Status Assessments__  
   
@@ -13,7 +14,7 @@ __Species Status Assessments__
   
 [Sonoran desert tortoise SSA case study](McGowan_etal_2017_SDTSSA.pdf)
   
-
+---
   
 __General__  
   
@@ -21,9 +22,20 @@ __General__
   
 [Guide to statistical distributions](static/handouts/distributions.pdf) 
   
-  
+---
   
 __Species Distribution Models__  
   
-[SDMs for Conservation Educators and Practioners](static/handouts/SDMs-for-educators-and-practitioners.pdf)
+[SDMs for Conservation Educators and Practioners](static/handouts/SDMs-for-educators-and-practitioners.pdf)  
+  
+---
+  
+__Recommended Reading__  
+  
+[The Signal and the Noise: Why So Many Predictions Fail--but Some Don't](https://www.amazon.com/Signal-Noise-Many-Predictions-Fail-but-ebook/dp/B007V65R54)   
+Drawing on his own groundbreaking work, Silver examines the world of prediction, investigating how we can distinguish a true signal from a universe of noisy data. Most predictions fail, often at great cost to society, because most of us have a poor understanding of probability and uncertainty. Both experts and laypeople mistake more confident predictions for more accurate ones. But overconfidence is often the reason for failure. If our appreciation of uncertainty improves, our predictions can get better too. This is the “prediction paradox”: The more humility we have about our ability to make predictions, the more successful we can be in planning for the future.  
+  
+  
+[Quantitative Conservation Biology: Theory and Practice of Population Viability Analysis](https://www.amazon.com/Quantitative-Conservation-Biology-Population-Viability/dp/0878935460)   
+The goal of this book is to provide practical, intelligible, and intuitive explanations of population modeling to empirical ecologists and conservation biologists. Modeling methods that do not require large amounts of data (typically unavailable for endangered species) are emphasized. As such, the book is appropriate for undergraduate and graduate students interested in quantitative conservation biology, managers charged with preserving endangered species, and, in short, for any conservation biologist or ecologist seeking to better understand the analysis and modeling of population data.
   
