--- a/scheduled.Rmd
+++ b/scheduled.Rmd
@@ -51,6 +51,6 @@ Free shuttle to GBI Airport.
    
 ---
    
-### Dec 12-13, 2018 - Manhattan Beach, CA (SAT)  
+### Dec 12-13, 2018 - Los Angeles, CA (SAT)  
   
 SSA 200 will be offered during the SAT Calibration Workshop 
