--- a/handouts.Rmd
+++ b/handouts.Rmd
@@ -46,3 +46,9 @@ __Exploring uncertainties__
 [Another Shiny app!](https://amtucker.shinyapps.io/wild4890_pva/)  
 This app allows you to explore the effects of incoporating different types of uncertainties into population size projections using lambda and/or intrinsic rate of increase.  
   
+---  
+  
+__Demographic matrix models___  
+[COMADRE and COMPADRE Databases](https://comadre-db.org/)  
+This is a freely-available database where the authors have compiled estimates of demographic rates from published studies of plants (COMPADRE) and animals (COMADRE). There is demographic information from 405 animals and 695 plants in the database currently, with the majority from N. America. This could be a great resource for demographic estimates of sister taxa.  
+  
