--- a/instructors.Rmd
+++ b/instructors.Rmd
@@ -8,14 +8,9 @@ School of Forestry and Wildlife Sciences, Auburn University
 Auburn, AL  
 [More about Conor](http://www.auburn.edu/~cpm0014/)
   
-__Dr. Nicole Angeli__  
-Postdoctoral Fellow, Alabama Cooperative Fish and Wildlife Research Unit  
-_Nicole has moved on and is now the Chief of Wildlife at the Division of Fish and Wildlife, Department of Planning and Natural Resources, U.S. Virgin Islands_
-[More about Nicole](http://nicoleangeli1.wixsite.com/appliedconservation)  
-  
-__Anna Tucker__  
-Doctoral candidate, Alabama Cooperative Fish and Wildlife Research Unit   
-[More about Anna](http://annamtucker.weebly.com)  
+__Dr. Anna Tucker__  
+Postdoctoral Researcher, Alabama Cooperative Fish and Wildlife Research Unit   
+[More about Anna](http://annamtucker.github.io)  
   
 __Kylee Dunham__  
 Doctoral candidate, Alabama Cooperative Fish and Wildlife Research Unit   
