--- a/scheduled.Rmd
+++ b/scheduled.Rmd
@@ -53,4 +53,37 @@ Free shuttle to GBI Airport.
    
 ### Dec 12-13, 2018 - Los Angeles, CA (SAT)  
   
-SSA 200 will be offered during the SAT Calibration Workshop 
+SSA 200 will be offered during the SAT Calibration Workshop  
+  
+---  
+   
+### Dec 3-4, 2019 - Denver, CO  
+  
+
+__Dates & Location__   
+TBD
+  
+__Local Contact__  
+Craig Hanson
+  
+__Who Should Attend__  
+Fish and Wildlife Service biologists involved in conducting SSAs.  
+  
+__Length__  
+2 days, 8 am to 5 pm each day  
+  
+__College Credit__  
+Not applicable.  
+  
+__Tuition__  
+There is no tuition.  
+  
+__To Register__  
+Email the local contact of the class and request a place in the course.  
+  
+__Availability__  
+Limited to 35 participants.  
+  
+__Suggested Accommodations__  
+TBD   
+   
